k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-fullstack-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-fullstack-app
  template:
    metadata:
      labels:
        app: sample-fullstack-app
    spec:
      containers:
      - name: sample-fullstack-app-frontend
        image: ghcr.io/jakubbt/sample-app-frontend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      - name: sample-fullstack-app-backend
        image: ghcr.io/jakubbt/sample-app-backend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3010
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
