k8s/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app-frontend
  template:
    metadata:
      labels:
        app: sample-app-frontend
    spec:
      containers:
      - name: sample-app-frontend
        image: ghcr.io/jakubbt/sample-app-frontend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
