k8s/all-in-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app-frontend
  template:
    metadata:
      labels:
        app: sample-app-frontend
    spec:
      containers:
      - name: sample-app-frontend
        image: ghcr.io/jakubbt/sample-app-frontend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: sample-app-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app-backend
  template:
    metadata:
      labels:
        app: sample-app-backend
    spec:
      containers:
      - name: sample-app-backend
        image: ghcr.io/jakubbt/sample-app-backend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3010
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-backend
spec:
  ports:
  - port: 3010
  selector:
    app: sample-app-backend
