k8s/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: sample-app-frontend
